# rust_hello

./: Cargo.toml  canister_ids.json  dfx.json  package-lock.json  package.json  test.sh  test2.sh  test3.sh  webpack.config.js
src/declarations/rust_hello/: index.js  rust_hello.did  rust_hello.did.d.ts  rust_hello.did.js
src/icfs_fatfs/: Cargo.toml  lib.rs
src/rust_hello/: Cargo.toml  filesystem.rs  http_request.rs  ic0.rs  lib.rs  my_child_canister.wasm  rust_hello.did  test_storage.rs
src/rust_hello_assets/src/: index.html  index.js
