[package]
name = "icfs_fatfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib] 
path = "lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
time = "0.3"
ic-cdk = "0.5.0"
fatfs = { git = "https://github.com/rafalh/rust-fatfs", rev = "87fc1ed5074a32b4e0344fcdde77359ef9e75432" }